@@ -124,6 +124,19 @@ def edit_string_for_tags(tags):
         glue = u' '
     return glue.join(names)
 
+def get_queryset_and_model(queryset_or_model):
+    """
+    Given a ``QuerySet`` or a ``Model``, returns a two-tuple of
+    (queryset, model).
+
+    If a ``Model`` is given, the ``QuerySet`` returned will be created
+    using its default manager.
+    """
+    try:
+        return queryset_or_model, queryset_or_model.model
+    except AttributeError:
+        return queryset_or_model._default_manager.all(), queryset_or_model
+
 def get_tag_list(tags):
     """
     Utility function for accepting tag input in a flexible manner.
